# particle-simulation

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.sh  main.cpp
.cache/clangd/index/: glad.c.4B445633B2D47E3E.idx  glad.h.116AF1E7024E7E06.idx  glfw3.h.8E3E14754ECEEB93.idx  khrplatform.h.035ED08145564CF7.idx  main.cpp.16F4770681EC3DD7.idx
Renderer/: CMakeLists.txt
Renderer/Shader/: CMakeLists.txt  Shader.cpp  Shader.h
Resources/Shaders/: fragment_shader.glsl  vertex_shader.glsl
Utils/: CMakeLists.txt  FileParserUtils.h
